--- a/src/app/components/office-member-details/office-member-details.component.html
+++ b/src/app/components/office-member-details/office-member-details.component.html
@@ -1,10 +1,28 @@
 <div class="office-manager-detail">
     <div class="content my-container">
 
+        <div class="title">
+
+            <div class="left">
+                <span class="top">MON PROJET</span>
+                <span class="bottom">POUR LE</span>
+            </div>
+
+            <div class="right">
+                <div class="top">
+                    <span class="main">BASKETBALL</span>
+                    <span class="other">2022</span>
+                </div>
+                <div class="bottom">
+                    <span class="main">CAMEROUNAIS</span>
+                    <span class="other">Yves Tsala</span>
+                </div>
+            </div>
+        </div>
+
         <div class="top">
             <img src={{officeMemberData.image}} alt="">
             <div class="manager-data">
-                <span class="label"> <span> Team</span> Yves Tsala 2022 </span>
                 <span class="name"> {{officeMemberData.name}} </span>
                 <span class="role"> {{officeMemberData.role}} </span>
             </div>
