--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,10 +1,9 @@
 <header>
 
     <div class="content my-container">
-        <a routerLink="" class="logo">Draw <span>a new vision</span></a>
+        <a routerLink="" class="logo">Yves Tsala<span> 2022</span> </a>
 
         <div class="header-right">
-
             <nav>
                 <ul>
                     <li><a rel="canonical" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}" routerLink="/agenda">Agenda</a></li>
@@ -23,19 +22,32 @@
                     </div>
                 </button>
             </nav>
-
-
-
         </div>
-        <div class="burger" (click)="onBurgerMenu()">
-            <input type="checkbox" />
+
+        <p-button type="button" class="burger" (click)="visibleSidebar = true" icon="pi pi-bars"></p-button>
+
         
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-
 
     </div>
+    <p-sidebar [(visible)]="visibleSidebar" position="right" [baseZIndex]="100000">
+        <nav>
+            <ul>
+                <li><a rel="canonical" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}" routerLink="/agenda">Agenda</a></li>
+                <li><a rel="canonical" routerLinkActive="active-link" routerLink="/programme">Programme</a></li>
+                <li><a rel="canonical" routerLinkActive="active-link" routerLink="/nous-contacter">Nous contacter</a></li>
+            </ul>
 
+            <button (click)="showActMenu = !showActMenu">
+                <span>
+                    Agir
+                    <fa-icon [icon]="faAngleDown"></fa-icon>
+                </span>
+                <div class="menus" *ngIf="showActMenu">
+                    <a rel="canonical" routerLinkActive="active-link" routerLink="/partager-la-campagne">Partager la campagne</a>
+                    <a rel="canonical" routerLinkActive="active-link" routerLink="/faire-un-don">Faire un don</a>
+                </div>
+            </button>
+        </nav>
+    </p-sidebar>
 </header>
+
