--- a/src/app/components/infinite-scroll-argument/infinite-scroll-argument.component.scss
+++ b/src/app/components/infinite-scroll-argument/infinite-scroll-argument.component.scss
@@ -6,7 +6,10 @@
         width: 100%;
         display: flex;
         flex-direction: column;
-        margin: 50px 0 80px 0;
+        padding: 50px 25px 50px 25px;
+        background: #ed6e34;
+        margin-top: 30px;
+        margin-bottom: 80px;
     
         .infinite-swiper{
             width: 100%;
@@ -21,6 +24,8 @@
                 display: flex;
                 flex-direction: column;
                 cursor: pointer;
+                background: white;
+                padding: 10px;
     
                 img{
                     width: 100%;
@@ -40,7 +45,7 @@
                     }
     
                     .role{
-                        font-style: 0.95em;
+                        font-size: 0.9em;
                     }
                 }
     
@@ -105,4 +110,19 @@
     
         } 
        
+    }
+
+    .p-dialog-mask.p-component-overlay {
+        z-index: 9999 ;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+
+    @media all and (max-width: 1030px){
+        .arguments{
+            padding: 30px 10px 30px 10px;
+        }
     }
