--- a/src/app/components/program-short/program-short.component.scss
+++ b/src/app/components/program-short/program-short.component.scss
@@ -158,3 +158,96 @@ $colorBlue: #15385c;
         
     }
 }
+
+@media all and (max-width: 1024px){
+
+    .program-short{
+    
+        .content{
+    
+            .accordion-content{
+                padding: 0;
+    
+                .images{
+                    width: 300px;
+                    height: 250px;
+                    margin-right: 20px;
+                    
+                    .swiper {
+                        width: 100%;
+                        height: 100%;
+                    
+                        .swiper-slide {
+                            text-align: center;
+                            font-size: 18px;
+                            background: #fff;
+                          
+                            /* Center slide text vertically */
+                            display: -webkit-box;
+                            display: -ms-flexbox;
+                            display: -webkit-flex;
+                            display: flex;
+                            -webkit-box-pack: center;
+                            -ms-flex-pack: center;
+                            -webkit-justify-content: center;
+                            justify-content: center;
+                            -webkit-box-align: center;
+                            -ms-flex-align: center;
+                            -webkit-align-items: center;
+                            align-items: center;
+                          }
+            
+                          .swiper-slide img {
+                            display: block;
+                            width: 100%;
+                            height: 100%;
+                            object-fit: cover;
+                          }
+    
+                          .swiper-pagination{
+                            height: 24px;
+                            bottom: 14px;
+                            padding: 0 13px;
+                            width: fit-content;
+                            background: #00000069;
+                            border-radius: 100px;
+                            left: 50%;
+                            transform: translateX(-50%);
+                
+                            .swiper-pagination-bullet{
+                                width: 15px;
+                                height: 15px;
+                                background-color: white;
+                                opacity: 0.65;
+                            }
+            
+                            .swiper-pagination-bullet:hover{
+                                opacity: 1;
+                            }
+                
+                            .swiper-pagination-bullet-active{
+                                background-color: #15385d;
+                                opacity: 1;
+                                margin-top: 4px;
+                            }
+                        }
+                    }
+                }
+    
+                .texts{
+
+                    font-size: 0.95em;
+
+                    p{
+                        text-align: justify;
+                        margin-bottom: 7px;
+                    }
+                }
+    
+                
+            }
+    
+            
+        }
+    }
+}
