--- a/src/app/components/infinite-scroll-argument/infinite-scroll-argument.component.scss
+++ b/src/app/components/infinite-scroll-argument/infinite-scroll-argument.component.scss
@@ -123,6 +123,6 @@
 
     @media all and (max-width: 1030px){
         .arguments{
-            padding: 30px 10px 30px 10px;
+            padding: 10px;
         }
     }
