--- a/src/app/components/program-short/program-short.component.scss
+++ b/src/app/components/program-short/program-short.component.scss
@@ -84,7 +84,7 @@ $colorBlue: #15385c;
                 .swiper {
                     width: 100%;
                     height: 100%;
-                
+
                     .swiper-slide {
                         text-align: center;
                         font-size: 18px;
@@ -110,6 +110,7 @@ $colorBlue: #15385c;
                         width: 100%;
                         height: 100%;
                         object-fit: cover;
+                        object-position: bottom;
                       }
 
                       .swiper-pagination{
@@ -160,94 +161,121 @@ $colorBlue: #15385c;
 }
 
 @media all and (max-width: 1024px){
-
     .program-short{
-    
         .content{
-    
             .accordion-content{
                 padding: 0;
     
                 .images{
-                    width: 300px;
-                    height: 250px;
-                    margin-right: 20px;
-                    
-                    .swiper {
-                        width: 100%;
-                        height: 100%;
-                    
-                        .swiper-slide {
-                            text-align: center;
-                            font-size: 18px;
-                            background: #fff;
-                          
-                            /* Center slide text vertically */
-                            display: -webkit-box;
-                            display: -ms-flexbox;
-                            display: -webkit-flex;
-                            display: flex;
-                            -webkit-box-pack: center;
-                            -ms-flex-pack: center;
-                            -webkit-justify-content: center;
-                            justify-content: center;
-                            -webkit-box-align: center;
-                            -ms-flex-align: center;
-                            -webkit-align-items: center;
-                            align-items: center;
-                          }
-            
-                          .swiper-slide img {
-                            display: block;
-                            width: 100%;
-                            height: 100%;
-                            object-fit: cover;
-                          }
+                    width: 300px !important;
+                    height: 250px !important;
+                    margin-right: 20px !important;
+                }
     
-                          .swiper-pagination{
-                            height: 24px;
-                            bottom: 14px;
-                            padding: 0 13px;
-                            width: fit-content;
-                            background: #00000069;
-                            border-radius: 100px;
-                            left: 50%;
-                            transform: translateX(-50%);
-                
-                            .swiper-pagination-bullet{
-                                width: 15px;
-                                height: 15px;
-                                background-color: white;
-                                opacity: 0.65;
-                            }
-            
-                            .swiper-pagination-bullet:hover{
-                                opacity: 1;
-                            }
-                
-                            .swiper-pagination-bullet-active{
-                                background-color: #15385d;
-                                opacity: 1;
-                                margin-top: 4px;
-                            }
-                        }
+                .texts{
+                    p{
+                        font-size: 0.95em;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media all and (max-width: 768px){
+    .program-short{
+        .content{
+            .accordion-content{
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+
+                .images{
+                    width: 500px !important;
+                    height: 300px !important;
+                    margin-right: 0 !important;
+                    margin-bottom: 30px;
+                }
+            }
+        }
+    }
+}
+
+@media all and (max-width: 580px){
+
+    .program-short{
+
+        .title{
+            min-height: fit-content;
+            .top-content{
+    
+                h1{
+                    width: 100%;
+                    font-size: 2em;
+                    margin-bottom: 25px;
+                }
+    
+                p{
+                    max-width: 100%;
+                    line-height: 25px;
+                    margin-bottom: 10px;
+                }
+            }
+        }
+
+        .content{
+            .accordion-content{
+                .images{
+                    width:100% !important;
+
+                    .swiper-wrapper { 
+                        width: calc(100vw - 2rem - 40px);
                     }
                 }
     
                 .texts{
 
-                    font-size: 0.95em;
-
                     p{
-                        text-align: justify;
-                        margin-bottom: 7px;
+                        font-size: 0.9em;
                     }
                 }
-    
-                
             }
-    
-            
+        }
+    }
+}
+
+@media all and (max-width: 425px){
+    .program-short{
+        .content{
+            .accordion-content{
+                .images{
+                    height: 237px !important;
+                }
+            }
+        }
+    }
+}
+
+@media all and (max-width: 375px){
+    .program-short{
+        .content{
+            .accordion-content{
+                .images{
+                    height: 210px !important;
+                }
+            }
+        }
+    }
+}
+
+@media all and (max-width: 325px){
+    .program-short{
+        .content{
+            .accordion-content{
+                .images{
+                    height: 200px !important;
+                }
+            }
         }
     }
 }
